Version 0.9.13 (2010/01/01)

  * Namespace "cvb".
  * cvblob.h, cvcontour.cpp: function to write contour to a SVG file.

Version 0.9.12 (2009/12/01)

  * cvaux.cpp: new file. Auxiliar functions.

  * cvcontour.cpp: bug fixed in cvConvertChainCodesToPolygon. Problem with
  blobs of one pixel. New functions.

  * cvtrack.cpp: memory leak fixed in cvRenderTracks.

  * cvblob.h: doxygen documentation. New functions.

Version 0.9.11 (2009/10/01)

  * cvblob.cpp, cvlabel.cpp, cvtracker.cpp, cvcontour.cpp: error handling
  OpenCV's style.

  * cvlabel.ccp: Fixed another bug about ranges.

Version 0.9.10 (2009/09/30)

  * cvlabel.cpp: Fixed a mistake in the labeling algorithm.

  * cvcontour.cpp: new file. Contours.

  * cvblob.h: contours types and functions.

  * test.cpp: added ROI and contours for test.

Version 0.9.9 (2009/09/11)

  * cvblob.cpp, cvlabel.cpp: ImageROI support by Kouichi Nishino.

  * cvblob.h, cvtrack.cpp: new features. Tracking implementation.

  * test_tracking.cpp: new test for tracking. 

  * EnterExitCrossingPaths2front_blobs.mpeg,
  EnterExitCrossingPaths2front_blobs.txt: new files. Video for tracking test
  and info about the video.

  * CMakeLists.txt: various files. Updated. Also "Release/Debug" flag added to
  main "CMakeLists.txt".

  * README: updated contributors.

  * Doxyfile: removed obsolete parameter.

Version 0.9.8 (2009/03/13)

  * cvblob.h: Doxygen documentation added.

  * Doxyfile: new file. Doxygen configuration.

  * cvlabel: fixed bounding box area calculation in cvRenderBlobs, and blobs
  structure release.

  * cvblob.h, cvblob.cpp:
    + cvReleaseBlobs: new function to release memory.
    + Various: trying some optimization.

  * test.cpp: releases blobs.

Version 0.9.7 (2009/01/09)

  * cvblob.cpp: fixed little bug in cvRenderBlobs.

  * cvlabel.cpp: fixed memory bug in cvLabel.

Version 0.9.6 (2009/01/07)

  * cvblob.cpp:
    + Various: fixed some warnings and indentation.