@@ -27,8 +27,8 @@ set(PACKAGE cvBlob)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)
 
-set(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_BUILD_TYPE Debug)
+#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
 
 #if(!WIN32)
 #  set(CMAKE_EXE_LINKER_FLAGS -Bstatic)
@@ -57,8 +57,8 @@ set(CPACK_PACKAGE_VENDOR "Cristóbal Carnero Liñán <grendel.ccl@gmail.com>")
 set(CPACK_PACKAGE_DESCRIPTION_FILE ${cvBlob_SOURCE_DIR}/README)
 set(CPACK_PACKAGE_VERSION_MAJOR 0)
 set(CPACK_PACKAGE_VERSION_MINOR 9)
-set(CPACK_PACKAGE_VERSION_PATCH 12)
-set(CPACK_PACKAGE_VERSION "0.9.12")
+set(CPACK_PACKAGE_VERSION_PATCH 13)
+set(CPACK_PACKAGE_VERSION "0.9.13")
 set(CPACK_RESOURCE_FILE_LICENSE ${cvBlob_SOURCE_DIR}/COPYING.LESSER)
 set(CPACK_RESOURCE_FILE_README ${cvBlob_SOURCE_DIR}/README)
 
